mi_robot_manipulador_2/log/build_2023-04-23_22-49-09/mi_robot_manipulador_2/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/robotica/Taller3/mi_robot_manipulador_2/install/mi_robot_manipulador_2/lib/python3.10/site-packages/mi_robot_manipulador_2/robot_manipulator_teleop.py", line 40
    self.publisher_zone_.publish(zone_msg
                                ^
SyntaxError: '(' was never closed

